--- a/SecurityApp.Web/ClientApp/src/app/core/core.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/core/core.component.html
@@ -1,3 +1,9 @@
 <app-navbar></app-navbar>
-<app-sidebar></app-sidebar>
-<router-outlet></router-outlet>
+<mat-drawer-container>
+    <mat-drawer mode="side" [opened]="sharedService.openedSidebar">
+        <app-sidebar></app-sidebar>
+    </mat-drawer>
+    <mat-drawer-content>
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
