--- a/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<mat-toolbar color="primary">
+    <button mat-icon-button (click)="toggleSidebar()">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span>Security App</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button>
+        <mat-icon>login</mat-icon>
+    </button>
+</mat-toolbar>
