feat: Created component for login

--- a/SecurityApp.Web/ClientApp/src/app/core/core.component.scss
+++ b/SecurityApp.Web/ClientApp/src/app/core/core.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
 }
 
 mat-drawer {    
@@ -12,5 +13,6 @@ mat-drawer {
 
 mat-drawer-container {
     height: 100%;
+    width: 100%;
     background-color: #F9F9FF;    
 }
