--- a/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </button>
     <span>Security App</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button>
-        <mat-icon>login</mat-icon>
+    <button mat-button [routerLink]="['security', 'login']">
+        Sign in
     </button>
 </mat-toolbar>
