--- a/SecurityApp.Web/ClientApp/src/app/modules/security/components/sign-in/sign-in.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/security/components/sign-in/sign-in.component.html
@@ -1,14 +1,11 @@
 <form class="row" [formGroup]="form">
-    
-    <h1 class="col-12">
-        <b>Login</b>
-    </h1>
-    
+
     <div class="col-12">
         <mat-form-field>
             <mat-label>Email</mat-label>
-            <input type="email" matInput formControlName="username" placeholder="username@example.com">
-            <mat-error *ngIf="form.controls['username'].hasError('email') && !form.controls['username'].hasError('required')">
+            <input type="email" matInput formControlName="username" placeholder="username@example.com" maxlength="250">
+            <mat-error
+                *ngIf="form.controls['username'].hasError('email') && !form.controls['username'].hasError('required')">
                 Please enter a valid email address
             </mat-error>
             <mat-error *ngIf="form.controls['username'].hasError('required')">
@@ -20,7 +17,7 @@
     <div class="col-12">
         <mat-form-field>
             <mat-label>Password</mat-label>
-            <input type="password" matInput formControlName="password" placeholder="Enter your password">
+            <input type="password" matInput formControlName="password" placeholder="Enter your password" maxlength="50">
             <mat-error *ngIf="form.controls['password'].hasError('required')">
                 Password is <strong>required</strong>
             </mat-error>
