--- a/SecurityApp.Web/ClientApp/src/app/modules/security/security.component.scss
+++ b/SecurityApp.Web/ClientApp/src/app/modules/security/security.component.scss
@@ -5,6 +5,10 @@
 }
 
 .row {
+    --bs-gutter-x: none;    
+}
+
+.container__box {
     margin: 0;
     width: 100vw;
     height: 100vh;
@@ -15,17 +19,35 @@
     align-items: center;
 }
 
-.col-12 {
+.box {
+    position: relative;
     width: 300px;
-    height: 300px;
+    height: 325px;
     background: #fff;
-    border: 1px solid #000;
+    border: 1px solid rgba(0,0,0,.12);
+    border-radius: 5%;
 }
 
-@media (max-width: 450px)
-{
-    .col-12 {
+@media (max-width: 450px) {
+    .box {
         width: 100%;
-        height: 100%;
+        height: 300px;
     }
+}
+
+.router__links{
+    padding: 5px;
+}
+
+.a__back {
+    position: absolute;
+    width: 100%;
+    bottom:0;
+    padding: 5px;
+    text-align: center;
+}
+
+.mat-tab-link{
+    height: 35px !important;
+    min-width: 149px !important;
 }
