--- a/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -1,10 +1,17 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="!this.router.url.includes('security')">
     <button mat-icon-button (click)="toggleSidebar()">
         <mat-icon>menu</mat-icon>
     </button>
-    <span>Security App</span>
+    
+    <span [routerLink]="['']">Security App</span>
+
     <span class="example-spacer"></span>
-    <button mat-button [routerLink]="['security', 'login']">
+    
+    <button mat-button [routerLink]="['/security', 'sign-in']">
         Sign in
+    </button>
+    
+    <button mat-button [routerLink]="['/security', 'sign-up']">
+        Sign up
     </button>
 </mat-toolbar>
