--- a/SecurityApp.Web/ClientApp/src/app/modules/security/components/sign-in/sign-in.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/security/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<form class="row" [formGroup]="form">
+<form class="row" [formGroup]="form" (ngSubmit)="ngSubmit()">
 
     <div class="col-12">
         <mat-form-field>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="col-12">
-        <button mat-raised-button color="primary">
+        <button type="submit" mat-raised-button color="primary" [disabled]="!form.valid">
             <mat-icon>login</mat-icon>
             Sign in
         </button>
