docs: Swagger documentation update.

--- a/SecurityApp.Web/ClientApp/src/app/modules/home/home.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/home/home.component.html
@@ -12,6 +12,13 @@
         </div>
 
         <div class="col-12">
+            <h1>Swagger Documentation</h1>
+            <p>
+                <a [href]="linkSwagger" target="_blank">Click here</a>
+            </p>
+        </div>
+
+        <div class="col-12">
             <h1>Using the Angular with ASP.NET Core</h1>
             <p>
                 The ASP.NET Core with Angular project template provides a convenient starting point for ASP.NET Core
@@ -31,21 +38,22 @@
         <div class="col-12">
             <h1>Command deployed application in Docker</h1>
             <p>In a terminal on the application path run the command:</p>
-            <p>
+            <p translate="no">
                 <b>docker-compose up --build</b>
             </p>
         </div>
 
         <div class="col-12">
             <h1>Admin Credentials</h1>
-            
-            <p><b>Username: </b>contato.abelgasque@gmail.com</p>
-            <p><b>Password: </b>admin</p>
+
+            <p translate="no"><b>Username: </b>contato.abelgasque@gmail.com</p>
+            <p translate="no"><b>Password: </b>admin</p>
 
             <br>
             <p>
                 <b>Note: </b>Credentials can be added or changed in the
-                <a href="https://github.com/abelgasque/AbelGasque.WebApp.SecurityApp/tree/main/SecurityApp.Web/Infrastructure/Entities/Models/ApplicationDbContext.cs">ApplicationDbContext</a>
+                <a
+                    href="https://github.com/abelgasque/AbelGasque.WebApp.SecurityApp/tree/main/SecurityApp.Web/Infrastructure/Entities/Models/ApplicationDbContext.cs">ApplicationDbContext</a>
                 file and generating a new migration before deploying to the development environment.
             </p>
         </div>
