--- a/SecurityApp.Web/ClientApp/src/app/modules/security/components/sign-in/sign-in.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/security/components/sign-in/sign-in.component.html
@@ -1,6 +1,12 @@
 <form class="row" [formGroup]="form" (ngSubmit)="ngSubmit()">
 
     <div class="col-12">
+        <h3>
+            <b>Enter your credentials</b>
+        </h3>
+    </div>
+
+    <div class="col-12">
         <mat-form-field>
             <mat-label>Email</mat-label>
             <input type="email" matInput formControlName="username" placeholder="username@example.com" maxlength="250">
