--- a/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.html
@@ -1,1 +1,35 @@
-<p>customer works!</p>
+<div class="row">
+
+    <div class="col-12">
+        <p-table [value]="data" [lazy]="true" (onLazyLoad)="pagination($event)" [paginator]="true" [rows]="size"
+            [(first)]="page" [showCurrentPageReport]="true" [rowsPerPageOptions]="[25,50,100]" [loading]="loading"
+            [rowHover]="true" [totalRecords]="totalRecords" [breakpoint]="'960px'" responsiveLayout="stack"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Name</th>
+                    <th style="width: 10pc;">Date Creation</th>
+                    <th style="width: 10pc;">Date Update</th>
+                    <th style="width: 5px;">Active</th>
+                    <th style="width: 5px;">Block</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-row>
+                <tr>
+                    <td>{{row.firstName}} {{row.lastName}}</td>
+                    <td>{{row.creationDate | date : 'short' : '' : 'en'}}</td>
+                    <td>{{row.updateDate | date : 'short' : '' : 'en'}}</td>
+                    <td>{{row.active}}</td>
+                    <td>{{row.block}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="8">No customers found.</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+
+</div>
