feat: Update href home page.

--- a/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,9 @@
         <mat-icon>menu</mat-icon>
     </button>
 
-    <span [routerLink]="['']">Security App</span>
+    <span>
+        <a href="#" [routerLink]="['']">Security App</a>
+    </span>
 
     <span class="example-spacer"></span>
 
