feat: Created customer filter and pagination.

--- a/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.scss
+++ b/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.scss
@@ -1,3 +1,24 @@
 .row {
     width: 100%;
 }
+
+th,
+.mat-paginator {
+    background-color: #cfcfcf;
+}
+
+table {
+    margin-top: 10px;
+    width: 100%;
+}
+
+.mat-form-field {
+    width: 100%;
+    margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+    .input__space {
+        padding-top: 12px;
+    }
+}
