--- a/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.html
@@ -1,35 +1,130 @@
-<div class="row">
+<mat-accordion>
+    <mat-expansion-panel [expanded]="true">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                <mat-icon>search</mat-icon>
+                Filter Customer
+            </mat-panel-title>
+        </mat-expansion-panel-header>
 
-    <div class="col-12">
-        <p-table [value]="data" [lazy]="true" (onLazyLoad)="pagination($event)" [paginator]="true" [rows]="size"
-            [(first)]="page" [showCurrentPageReport]="true" [rowsPerPageOptions]="[25,50,100]" [loading]="loading"
-            [rowHover]="true" [totalRecords]="totalRecords" [breakpoint]="'960px'" responsiveLayout="stack"
-            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+        <form class="row" [formGroup]="form" (ngSubmit)="read()">
+            <div class="col-sm-12 col-md-2">
+                <mat-form-field class="input__space">
+                    <mat-label>First Name</mat-label>
+                    <input type="text" matInput formControlName="firstName" placeholder="Enter your first name"
+                        maxlength="50">
+                </mat-form-field>
+            </div>
 
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Name</th>
-                    <th style="width: 10pc;">Date Creation</th>
-                    <th style="width: 10pc;">Date Update</th>
-                    <th style="width: 5px;">Active</th>
-                    <th style="width: 5px;">Block</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-row>
-                <tr>
-                    <td>{{row.firstName}} {{row.lastName}}</td>
-                    <td>{{row.creationDate | date : 'short' : '' : 'en'}}</td>
-                    <td>{{row.updateDate | date : 'short' : '' : 'en'}}</td>
-                    <td>{{row.active}}</td>
-                    <td>{{row.block}}</td>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="emptymessage">
-                <tr>
-                    <td colspan="8">No customers found.</td>
-                </tr>
-            </ng-template>
-        </p-table>
-    </div>
+            <div class="col-sm-12 col-md-2">
+                <mat-form-field class="input__space">
+                    <mat-label>Last Name</mat-label>
+                    <input type="text" matInput formControlName="lastName" placeholder="Enter your last name"
+                        maxlength="250">
+                </mat-form-field>
+            </div>
 
-</div>
+            <div class="col-sm-12 col-md-4">
+                <mat-form-field class="input__space">
+                    <mat-label>Email</mat-label>
+                    <input type="text" matInput formControlName="mail" placeholder="Enter your email" maxlength="250">
+                </mat-form-field>
+            </div>
+
+            <div class="col-sm-12 col-md-2">
+                <mat-form-field appearance="fill">
+                    <mat-label>Active</mat-label>
+                    <mat-select formControlName="active">
+                        <mat-option>Select</mat-option>
+                        <mat-option value="true">Yes</mat-option>
+                        <mat-option value="false">No</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div class="col-sm-12 col-md-2">
+                <mat-form-field appearance="fill">
+                    <mat-label>Block</mat-label>
+                    <mat-select formControlName="block">
+                        <mat-option>Select</mat-option>
+                        <mat-option value="true">Yes</mat-option>
+                        <mat-option value="false">No</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div class="col-12">
+                <button mat-raised-button type="submit" color="primary">
+                    Send
+                </button>
+
+                <button mat-raised-button type="button" (click)="clear()" color="warn" style="margin-left: 5px;">
+                    Clear
+                </button>
+            </div>
+        </form>
+    </mat-expansion-panel>
+</mat-accordion>
+
+<table mat-table [dataSource]="data" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="fisrtName">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let col"> {{col.firstName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+        <td mat-cell *matCellDef="let col">{{col.lastName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="mail">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let col">{{col.mail}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="dtCreation">
+        <th mat-header-cell *matHeaderCellDef style="width: 10pc;"> Date Creation </th>
+        <td mat-cell *matCellDef="let col"> {{col.creationDate | date : 'short' : '' : 'en'}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="dtUpdate">
+        <th mat-header-cell *matHeaderCellDef style="width: 10pc;"> Date Update </th>
+        <td mat-cell *matCellDef="let col"> {{col.updateDate | date : 'short' : '' : 'en'}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="active">
+        <th mat-header-cell *matHeaderCellDef style="width: 5pc;"> Active </th>
+        <td mat-cell *matCellDef="let col"> {{col.active}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="block">
+        <th mat-header-cell *matHeaderCellDef style="width: 5pc;"> Block </th>
+        <td mat-cell *matCellDef="let col"> {{col.block}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef style="width: 10px;"> Actions </th>
+        <td mat-cell *matCellDef="let col">
+            <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
+                <mat-icon>settings</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item>
+                    <mat-icon>edit</mat-icon>
+                    <span>Update</span>
+                </button>
+                <button mat-menu-item (click)="delete(col.id)">
+                    <mat-icon>delete</mat-icon>
+                    <span>Delete</span>
+                </button>
+            </mat-menu>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator #paginator (page)="handlePageEvent($event)" [length]="totalRecords" [pageSize]="size"
+    [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true" aria-label="Select page">
+</mat-paginator>
