--- a/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/customer/customer.component.html
@@ -58,6 +58,11 @@
                     Send
                 </button>
 
+                <button mat-raised-button type="button" (click)="newCustomer()" style="margin-left: 5px;"
+                    color="accent">
+                    Create
+                </button>
+
                 <button mat-raised-button type="button" (click)="clear()" color="warn" style="margin-left: 5px;">
                     Clear
                 </button>
@@ -66,7 +71,7 @@
     </mat-expansion-panel>
 </mat-accordion>
 
-<table mat-table [dataSource]="data" class="mat-elevation-z8">
+<table mat-table [dataSource]="data">
 
     <ng-container matColumnDef="fisrtName">
         <th mat-header-cell *matHeaderCellDef> First Name </th>
@@ -85,12 +90,12 @@
 
     <ng-container matColumnDef="dtCreation">
         <th mat-header-cell *matHeaderCellDef style="width: 10pc;"> Date Creation </th>
-        <td mat-cell *matCellDef="let col"> {{col.creationDate | date : 'short' : '' : 'en'}}</td>
+        <td mat-cell *matCellDef="let col"> {{col.creationDate | date : 'yyyy-MM-dd hh:mm'}}</td>
     </ng-container>
 
     <ng-container matColumnDef="dtUpdate">
         <th mat-header-cell *matHeaderCellDef style="width: 10pc;"> Date Update </th>
-        <td mat-cell *matCellDef="let col"> {{col.updateDate | date : 'short' : '' : 'en'}}</td>
+        <td mat-cell *matCellDef="let col"> {{col.updateDate | date : 'yyyy-MM-dd hh:mm'}}</td>
     </ng-container>
 
     <ng-container matColumnDef="active">
@@ -104,13 +109,13 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="width: 10px;"> Actions </th>
+        <th mat-header-cell *matHeaderCellDef style="width: 5pc;"> Actions </th>
         <td mat-cell *matCellDef="let col">
             <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
                 <mat-icon>settings</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button mat-menu-item (click)="readById(col.id)">
                     <mat-icon>edit</mat-icon>
                     <span>Update</span>
                 </button>
