--- a/SecurityApp.Web/ClientApp/src/app/modules/customer/components/dialog-customer/dialog-customer.component.html
+++ b/SecurityApp.Web/ClientApp/src/app/modules/customer/components/dialog-customer/dialog-customer.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content>
     <form class="row" [formGroup]="form">
         <div class="col-sm-12 col-md-3">
-            <mat-form-field class="input__space">
+            <mat-form-field appearance="fill">
                 <mat-label>First Name</mat-label>
                 <input type="text" matInput formControlName="firstName" placeholder="Enter your first name"
                     maxlength="50" [disabled]="loading">
@@ -10,7 +10,7 @@
         </div>
 
         <div class="col-sm-12 col-md-3">
-            <mat-form-field class="input__space">
+            <mat-form-field appearance="fill">
                 <mat-label>Last Name</mat-label>
                 <input type="text" matInput formControlName="lastName" placeholder="Enter your last name"
                     maxlength="250" [disabled]="loading">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="col-sm-12 col-md-6">
-            <mat-form-field class="input__space">
+            <mat-form-field appearance="fill">
                 <mat-label>Email</mat-label>
                 <input type="text" matInput formControlName="mail" placeholder="Enter your email" maxlength="250"
                     [disabled]="loading">
@@ -26,7 +26,7 @@
         </div>
 
         <div class="col-sm-12 col-md-3">
-            <mat-form-field class="input__space">
+            <mat-form-field appearance="fill">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput formControlName="password" placeholder="Enter your password"
                     maxlength="50" [disabled]="loading">
