Update social midia

--- a/client/src/app/shared/components/footer/footer.component.html
+++ b/client/src/app/shared/components/footer/footer.component.html
@@ -24,22 +24,13 @@
             <h2>Social Media</h2>
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100083491787419" target="_blank">Facebook</a>
+                    <a href="https://abelgasque.com" target="_blank">CV</a>
                 </li>
                 <li>
                     <a href="https://github.com/abelgasque" target="_blank">GitHub</a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/abelgasque.dev" target="_blank">Instagram</a>
-                </li>
-                <li>
                     <a href="https://linkedin.com/in/abelgasque" target="_blank">Linkedin</a>
-                </li>
-                <li>
-                    <a href="https://stackoverflow.com/users/12765033" target="_blank">Stackoverflow</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/abelgasque" target="_blank">Twitter</a>
                 </li>
             </ul>
         </div>
@@ -48,13 +39,7 @@
             <h2>Contacts</h2>
             <ul>
                 <li>
-                    <a href="https://discord.gg/nwgxQuuxmY" target="_blank">Discord</a>
-                </li>
-                <li>
-                    <a href="mailto:contato.abelgasque@gmail.com" target="_blank">Email</a>
-                </li>
-                <li>
-                    <a href="https://api.whatsapp.com/send?phone=5548991377315" target="_blank">WhatsApp</a>
+                    <a href="abelgasque20@gmail.com" target="_blank">Email</a>
                 </li>
             </ul>
         </div>
