--- a/client/src/app/modules/home/home.component.html
+++ b/client/src/app/modules/home/home.component.html
@@ -46,7 +46,7 @@
         <div class="col-12">
             <h1>Admin Credentials</h1>
 
-            <p translate="no"><b>Username: </b>contato.abelgasque@gmail.com</p>
+            <p translate="no"><b>Username: </b>admin</p>
             <p translate="no"><b>Password: </b>admin</p>
 
             <br>
