New api multi-tenant

--- a/client/src/app/modules/home/home.component.html
+++ b/client/src/app/modules/home/home.component.html
@@ -53,7 +53,7 @@
             <p>
                 <b>Note: </b>Credentials can be added or changed in the
                 <a
-                    href="https://github.com/abelgasque/AbelGasque.WebApp.SecurityApp/tree/main/Server/Infrastructure/Entities/Models/ApplicationDbContext.cs">ApplicationDbContext</a>
+                    href="https://github.com/abelgasque/AbelGasque.WebApp.SecurityApp/tree/main/Server/Infrastructure/Entities/Context/AppDbContext.cs">AppDbContext</a>
                 file and generating a new migration before deploying to the development environment.
             </p>
         </div>
